# cpp-skillbox-ls-25.4.2

./: CMakeLists.txt  CMakePresets.json
include/: cpu.h  disk.h  kbd.h  ram.h
src/: CMakeLists.txt  cpu.cpp  disk.cpp  gpu.cpp  kbd.cpp  main.cpp  ram.cpp
